[gd_scene load_steps=3 format=3 uid="uid://dc2rvkgxsj2nx"]

[ext_resource type="Script" path="res://scenes/player/hud/hud_score_system.gd" id="1_vpgox"]
[ext_resource type="Texture2D" uid="uid://dwhcr5a7xeqm8" path="res://textures/crosshairs/crosshair117.png" id="2_vdmr7"]

[node name="HudScoreSystem" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 100
script = ExtResource("1_vpgox")

[node name="ScoreLbl" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "SCORE:         0"

[node name="Control" type="Control" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -576.0
offset_top = 55.0
offset_right = 576.0
offset_bottom = 703.0
grow_horizontal = 2

[node name="ActionsListLbl" type="RichTextLabel" parent="Control/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
bbcode_enabled = true
fit_content = true

[node name="MultiplierLbl" type="RichTextLabel" parent="Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -133.0
offset_top = 24.0
offset_right = 133.0
offset_bottom = 47.0
grow_horizontal = 2
bbcode_enabled = true

[node name="ComboTimerBar" type="TextureProgressBar" parent="Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
value = 100.0
fill_mode = 4
texture_progress = ExtResource("2_vdmr7")
